# ChangeLog for x11-proto/xproto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.66 2009/04/16 02:35:54 jer Exp $

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> xproto-7.0.14.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> xproto-7.0.14.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> xproto-7.0.14.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> xproto-7.0.14.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> xproto-7.0.14.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> xproto-7.0.14.ebuild:
  Marking xproto-7.0.14 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> xproto-7.0.14.ebuild:
  Marking xproto-7.0.14 ppc stable for bug 251832

*xproto-7.0.14 (13 Jan 2009)

  13 Jan 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  +xproto-7.0.14.ebuild:
  Bump. Adds some new key symbols for battery, bluetooth, WLAN, UWB
  (wireless USB), some HID remote controls...

*xproto-7.0.13 (06 Jun 2008)

  06 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +xproto-7.0.13.ebuild:
  Bump to latest, added support for multi-pointer X. It won't actually be in
  xorg-server till 1.6 or so, but it's available in the git ebuilds.

*xproto-7.0.12 (10 Mar 2008)

  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +xproto-7.0.12.ebuild:
  Bump.

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xproto-7.0.7.ebuild:
  Drop old ebuilds.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> xproto-7.0.10.ebuild:
  Stable on sparc wrt #175465

  03 Jul 2007; Lars Weiler <pylon@gentoo.org> xproto-7.0.10.ebuild:
  Stable on ppc; bug #175465.

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> xproto-7.0.10.ebuild:
  alpha stable wrt #175465
