@@ -4,9 +4,9 @@ DIST xproto-7.0.10.tar.bz2 142954 RMD160 886d409920e5cd178d61048cc4617664d80e53e
 DIST xproto-7.0.12.tar.bz2 150119 RMD160 a764e891504a6e28fe5cc9fd0c351b3e4ac0d53a SHA1 4733d20c0f99988eafc41db5d155adbe7001930f SHA256 bec5a98bbea56da069785784116261ec956df039fb07d0cdca53ae1ed03ebc0f
 DIST xproto-7.0.13.tar.bz2 148633 RMD160 24d55b70cd36dab9e5f08f7de59825c52b81beee SHA1 ed09b262381a725ca54585bb9ff7b98f8a8cfea0 SHA256 6f6328922d69f5de29513a5baf1d010db2a7a54cb58a7a6cbbb1b25097ecd592
 DIST xproto-7.0.14.tar.bz2 152503 RMD160 e8b63f555ec3c4a91330679271fcd699a39fcdf9 SHA1 cb8b35d290c4c57c78dad06b91136fef08e0f80c SHA256 24274af4e800fd32702c5258dabe16eccf96f50a4b4feb4a14780c85f3e786df
-EBUILD xproto-7.0.10.ebuild 605 RMD160 6a8fe444adeff2a8d388178baa0cd0628bc715d5 SHA1 3d43a72cf3df0c83e1f798bbb3e51caae2182cde SHA256 13345ba8546f1bbf5727ade580a380f18e6e1deaca1c4659588454f956a9333b
-EBUILD xproto-7.0.12.ebuild 562 RMD160 30b96b21e5f69ca4f845efa858b9c8c8b0e816cf SHA1 4417d778122f461384792104493d38ca9b8c6d8b SHA256 06025d6cdcb5a7355a304542e3c590d39516bd54edb269716f876cae0d2574c6
-EBUILD xproto-7.0.13.ebuild 640 RMD160 bea3a807bb4654be912ecd2e651892e20dc6a896 SHA1 ca077988bba6f7157ceea7c240baec994e0b1391 SHA256 269ac0bb639decdc1bd2ae1022c07ee88eb53877c71ba9a2530b783bce4ccc55
-EBUILD xproto-7.0.14.ebuild 655 RMD160 3c3685747a729e01adb3e961a3c7bbd404aea9d5 SHA1 959641a4c8a568d2c91608809c99d2a83c139561 SHA256 9906d9eb02228edc44720b72e217fe923bd40df32889be167e28c4fd8e082dc0
-MISC ChangeLog 7876 RMD160 29c47476706c597b790d6795f2a4366c8b4dabce SHA1 1179d10854b4fcb7efb2e369677c8cc40cd65725 SHA256 da4f1ad9897b2e3862f8cf0fa6b0e621afabbaacb713d54f0ae03324f2f72d3e
+EBUILD xproto-7.0.10.ebuild 609 RMD160 95fb47afb7c65ea636e03dc72d73c9999b4af5e1 SHA1 0b1d8ed1856c07b54933b382bcb653cd136c2a5e SHA256 a3aee87653f975588afa4ed6460d86c198f32e1381756491fad348cf7ad2f6fa
+EBUILD xproto-7.0.12.ebuild 565 RMD160 e688e911d3c2abf56a84a98a66dbd96dff6de39e SHA1 a20825038cc737319d8ebfba570139617ccf4576 SHA256 3e4e51b6d73e3c39d5f50c28010e6a6811f16215473b302e79d5b1fdf2257674
+EBUILD xproto-7.0.13.ebuild 643 RMD160 32a69aae2b445ed8db369def032ceba6423adf94 SHA1 5aced7e8821c1e0dbf261286c8b9b4ef45957186 SHA256 a714f482e5b1fffa09f465be17f6a46c267dde37673b6b567968eaeb1f9f67ef
+EBUILD xproto-7.0.14.ebuild 664 RMD160 15533f746cc563f6b5aaa5a6b425a4e74f79063c SHA1 2a0196e08ffe6441f0aad97a9ad7dc50ccf428a5 SHA256 be97cd4b7b71c2825f143925272396b13ee9ce19c75c5962a9a7da4d835852a7
+MISC ChangeLog 8047 RMD160 9814fed451db1f3c02f30f9360596376cc8926c7 SHA1 461236fe5bdb237f11bca98b181b327d14180337 SHA256 b762c16fdfb66872f85bf438191fde9239f6ce6ee0baff52469ab16ea2f9cb44
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
