@@ -1,6 +1,10 @@
 # ChangeLog for x11-proto/xproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.66 2009/04/16 02:35:54 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.67 2009/05/05 15:40:58 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org> xproto-7.0.10.ebuild,
+  xproto-7.0.12.ebuild, xproto-7.0.13.ebuild, xproto-7.0.14.ebuild:
+  fix repoman warnings
 
   16 Apr 2009; Jeroen Roovers <jer@gentoo.org> xproto-7.0.14.ebuild:
   Stable for HPPA (bug #251832).
